# discord-rpc

./: .gitignore  CMakeLists.txt
include/: discord_rpc.h
src/: CMakeLists.txt  backoff.h  connection.h  discord_register_win.cpp  discord_rpc.cpp  dllmain.cpp  rpc_connection.cpp  rpc_connection.h  serialization.cpp  serialization.h
